[gd_scene load_steps=5 format=3 uid="uid://d0f4ujqaw47dl"]

[ext_resource type="Script" path="res://Scenes and Scripts/player_clicker.gd" id="1_j1qqg"]
[ext_resource type="PackedScene" uid="uid://dr6b8juhrnycx" path="res://Scenes and Scripts/bottom_menu.tscn" id="4_7m6tf"]
[ext_resource type="Texture2D" uid="uid://bh3xl6wadvyyd" path="res://Sprites/player_levels/lavel_3.png" id="6_ywtcv"]
[ext_resource type="FontFile" uid="uid://ygkw8nutfli2" path="res://Fonts/bender.bold.otf" id="7_s3hr1"]

[node name="PlayerClicker" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j1qqg")

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
anchor_mode = 0
ignore_rotation = false
enabled = false

[node name="TopPanel" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 72.0
grow_horizontal = 2

[node name="TextureRect" type="TextureRect" parent="TopPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -28.0
offset_right = 64.0
offset_bottom = 28.0
grow_vertical = 2
texture = ExtResource("6_ywtcv")

[node name="PlayerName" type="Label" parent="TopPanel"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 72.0
offset_right = 393.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_s3hr1")
theme_override_font_sizes/font_size = 48
text = "Taldariner"
vertical_alignment = 1

[node name="PlayerMoney" type="Label" parent="TopPanel"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -354.0
offset_right = -72.0
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_s3hr1")
theme_override_font_sizes/font_size = 48
text = "300
"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ClickerZone" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 72.0
offset_bottom = -144.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ClickerZone"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 0.490196)
theme_override_fonts/font = ExtResource("7_s3hr1")
theme_override_font_sizes/font_size = 72
text = "Click Me!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomMenu" parent="." instance=ExtResource("4_7m6tf")]
layout_mode = 1

[connection signal="gui_input" from="ClickerZone" to="." method="_on_control_gui_input"]
